# pex

./: .gitignore  README.md  chatstarters.txt  eval.py  main.py  pyproject.toml  requirements.txt  session_measurements.json
.ipynb_checkpoints/: Naamloos-checkpoint.ipynb  notebook_bart-checkpoint.ipynb  notebook_bert-checkpoint.ipynb  test MPS-checkpoint.ipynb
dataset/: convai2.py  msc_binary.py  msc_kg_sessions.py  msc_sessions.py  msc_speechact.py  msc_summary.py  msc_summary_hf.py  msc_summary_turns.py  tokenizer.py  vocab.py
docs/: Diagram zonder titel.drawio  Figures in powerpoint.pptx  MSC-Sessions-review.xlsx  architecture.drawio  chat.txt  sample for speechacts.xlsx  sample.xlsx  speechact_dataset.xlsx
metrics/: nli.py  terp.py
models/: agent.py  bart_extractor.py  bert_classifier.py  decoder_models.py  dialogpt.py  encoder_models.py  memory.py  persona_extractor.py  speechact_clf.py  t5_extractor.py
notebooks/: Naamloos.ipynb  analyse_bart_eval.ipynb  analyse_bart_persona_eval.ipynb  analyse_bart_summary_eval.ipynb  analyse_gpt2_eval.ipynb  analyse_gpt2_generation_eval.ipynb  analyse_gpt2_selfchat_eval.ipynb  analyse_ray.ipynb  filter_dataset_concepts.ipynb  gpt_context3.csv  gpt_context3.xlsx  inspect_msc_session.ipynb  loaddeberta.py  notebook_bart.ipynb  notebook_bert.ipynb  pex_notebook.ipynb  ray.ipynb  speechact_test.json  speechact_test_s3_100.json  test MPS.ipynb  test gpt4.ipynb  test hugchat.ipynb  test_KG.ipynb  test_MPS_basic.ipynb  test_bart.ipynb  test_bart_basic.ipynb  test_bert_basic.ipynb  test_bleu.ipynb  test_config.ipynb  (+8 more)
(+45 files in other folders)
